--- a/index.css
+++ b/index.css
@@ -23,6 +23,8 @@ body {
   font-weight: 800;
   font-size: 43px;
   margin-top: 50px;
+  text-decoration: underline;
+  font-family: italic;
 }
 
 .text {
