--- a/index.css
+++ b/index.css
@@ -19,12 +19,12 @@ body {
 }
 
 .container>h1 {
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
   font-weight: 800;
   font-size: 43px;
   margin-top: 50px;
   text-decoration: underline;
-  font-family: italic;
 }
 
 .text {
