--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background-color: #e5e5e5;
 }
 
 .container {
